--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container p-4">
   <h2 class="text-success">Template Form</h2>
 
-  <form class="pt-2" (ngSubmit)="onSubmit(myForm)" #myForm="ngForm">
+  <form class="pt-2" (ngSubmit)="onSubmit()" #myForm="ngForm">
     <div class="form-group">
       <label for="exampleUserName">User name</label>
       <input type="email" class="form-control" id="exampleUserName" aria-describedby="emailHelp" ngModel name="username" placeholder="Enter user name">
