--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,10 @@
       class="form-control" 
       id="exampleUserName" aria-describedby="emailHelp" 
       required ngModel 
+      #name="ngModel"
       name="username" 
       placeholder="Enter user name">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your username with anyone else.</small>
+      <small *ngIf="name.invalid && name.touched" id="emailHelp" class="form-text text-danger m-0">Required field</small>
     </div>
     <div class="form-group">
       <label for="exampleEmail">Email</label>
@@ -21,9 +22,11 @@
       required 
       email
       ngModel 
+      #email="ngModel"
       class="form-control" 
       id="exampleEmail" 
       placeholder="Email">
+      <small *ngIf="email.invalid && email.touched" id="emailHelp" class="form-text text-danger m-0">Required field</small>
     </div>
     <div class="form-check">
       <input required name="agree" ngModel type="checkbox" class="form-check-input" id="exampleCheck1">
