--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,19 @@
       placeholder="Email">
       <small *ngIf="email.invalid && email.touched" id="emailHelp" class="form-text text-danger m-0">Required field</small>
     </div>
+
+    <div class="form-group">
+    <label for="exampleFormControlSelect1">Select School</label>
+    <select required ngModel name="school" class="form-control" id="exampleFormControlSelect1">
+      <option value="loyola">Loyola College</option>
+      <option value="urbanDay">Urban Day</option>
+      <option value="ikolaba">Ikolaba Grammar School</option>
+      <option value="gci">Goverment College, Ibadan</option>
+      <option value="isi">Ibadan School International</option>
+    </select>
+  </div>
+
+
     <div class="form-check">
       <input required name="agree" ngModel type="checkbox" class="form-check-input" id="exampleCheck1">
       <label class="form-check-label" for="exampleCheck1">I agree</label>
