default tested again

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
       name="email" 
       required 
       email
-      ngModel 
+      [ngModel]='"Afolabi"' 
       #email="ngModel"
       class="form-control" 
       id="exampleEmail" 
